eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neo-bank-api-deployment
  labels:
    app: neo-bank-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: neo-bank-api
  template:
    metadata:
      labels:
        app: neo-bank-api
    spec:
      containers:
      - name: neo-bank-api
        image: 118565160183.dkr.ecr.ap-southeast-1.amazonaws.com/neobank:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
