eks/ingress-grpc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: neo-bank-ingress-grpc
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  ingressClassName: nginx
  rules:
  - host: "gapi.neobank24.net"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: neo-bank-api-service
            port:
              number: 90
  tls:
  - hosts:
    - gapi.neobank24.net
    secretName: neo-bank-gapi-cert
