eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: neo-bank-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
  - host: "api.neobank24.net"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: neo-bank-api-service
            port:
              number: 80
  tls:
  - hosts:
    - api.neobank24.net
    secretName: neo-bank-api-cert
